--- a/src/app.css
+++ b/src/app.css
@@ -1,21 +1,75 @@
+@import '@fontsource/roboto';
+
 :root {
+	--font-heading: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+	--font-body: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
+
   --color-dark: #272727;
   --color-darker: #121212;
   --color-light: rgba(255, 255, 255, 0.7);
+  --color-light-dim: rgba(255, 255, 255, 0.4);
+  --color-accent: rgb(144, 202, 249);
+  --color-accent-dim: rgba(144, 202, 249, 0.4);
 
   --body-background-color: var(--color-darker);
   --card-background-color: var(--color-dark);
   --body-text-color: var(--color-light);
+  --link-color: var(--color-accent);
+
+  scroll-behavior: smooth;
 }
 
 * {
   box-sizing: border-box;
 }
 
+.visually-hidden {
+	border: 0;
+	clip: rect(0 0 0 0);
+	height: auto;
+	margin: 0;
+	overflow: hidden;
+	padding: 0;
+	position: absolute;
+	width: 1px;
+	white-space: nowrap;
+}
+
 body {
+	min-height: 100vh;
+	margin-inline-start: 0;
+	margin-inline-end: 0;
+	margin-block-start: 0;
+	margin-block-end: 0;
+	background-attachment: fixed;
+	background-size: 100vw 100vh;
   background-color: var(--body-background-color);
   color: var(--body-text-color);
-  font-family: sans-serif;
+	font-family: var(--font-body);
+  line-height: 1.5;
+  font-size: 1rem;
+}
+
+main {
+  margin-inline-start: auto;
+  margin-inline-end: auto;
+  margin-block-start: 2rem;
+  margin-block-end: 0;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
+  padding-block-start: 0;
+  padding-block-end: 0;
+  width: 100%;
+  font-size: 1.2rem;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-heading);
 }
 
 section {
@@ -27,7 +81,12 @@ section {
   margin-inline-end: auto;
 }
 
-input[type=text] {
+input,
+button {
   font-size: inherit;
+  font-family: inherit;
+}
+
+input[type=text] {
   color: inherit;
 }
