--- a/src/app.css
+++ b/src/app.css
@@ -6,6 +6,7 @@
 
   --color-dark: #272727;
   --color-darker: #121212;
+  --color-off-white: #fffff0;
   --color-light: rgba(255, 255, 255, 0.7);
   --color-light-dim: rgba(255, 255, 255, 0.4);
   --color-accent: rgb(144, 202, 249);
@@ -19,6 +20,18 @@
   --link-hover-color: var(--color-accent-dim);
 
   scroll-behavior: smooth;
+}
+
+/* This used to use @media (prefers-color-scheme: dark) */
+body.dark-mode {
+  --color-dark: #333;
+  --body-background-color: var(--color-off-white);
+  --card-background-color: #abc;
+  --card-text-color: var(--color-dark);
+  --body-text-color: var(--color-dark);
+  --border-color: #666;
+  --link-color: #333;
+  --link-hover-color: #111;
 }
 
 * {
@@ -49,6 +62,10 @@ body {
   color: var(--body-text-color);
 	font-family: var(--font-body);
   line-height: 1.5;
+}
+
+body:not([data-has-js]) [data-requires-js] {
+  display: none;
 }
 
 main {
