--- a/src/app.css
+++ b/src/app.css
@@ -4,8 +4,7 @@
 	--font-heading: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 	--font-body: Roboto, 'Open Sans', 'Helvetica Neue', sans-serif;
 
-  --color-dark: #272727;
-  --color-darker: #121212;
+--color-darker: #121212;
   --color-off-white: #fffff0;
   --color-light: rgba(255, 255, 255, 0.7);
   --color-light-dim: rgba(255, 255, 255, 0.4);
@@ -13,22 +12,8 @@
   --color-other-dunno-color: #90caf9;
   --color-accent-dim: rgba(144, 202, 249, 0.4);
 
-  --body-background-color: var(--color-darker);
-  --card-background-color: var(--color-dark);
-  --body-text-color: var(--color-light);
-  --link-color: var(--color-accent);
-  --link-hover-color: var(--color-accent-dim);
-
-  --toggle-track-color-off: var(--color-accent-dim);
-  --toggle-track-color-on: var(--toggle-track-color-off);
-  --toggle-knob-color-off: var(--color-accent);
-  --toggle-knob-color-on: var(--toggle-knob-color-off);
-
   scroll-behavior: smooth;
-}
 
-/* This used to use @media (prefers-color-scheme: dark) */
-body.dark-mode {
   --color-dark: #333;
   --body-background-color: var(--color-off-white);
   --card-background-color: #abc;
@@ -41,6 +26,24 @@ body.dark-mode {
   --toggle-track-color-on: var(--toggle-track-color-off);
   --toggle-knob-color-off: var(--color-off-white);
   --toggle-knob-color-on: var(--toggle-knob-color-off);
+  --color-text-strong: black;
+  --border-color: rgba(0, 0, 0, 0.1);
+}
+
+/* This used to use @media (prefers-color-scheme: dark) */
+body.dark-mode {
+  --color-dark: #272727;
+  --body-background-color: var(--color-darker);
+  --card-background-color: var(--color-dark);
+  --body-text-color: var(--color-light);
+  --link-color: var(--color-accent);
+  --link-hover-color: var(--color-accent-dim);
+  --toggle-track-color-off: var(--color-accent-dim);
+  --toggle-track-color-on: var(--toggle-track-color-off);
+  --toggle-knob-color-off: var(--color-accent);
+  --toggle-knob-color-on: var(--toggle-knob-color-off);
+  --color-text-strong: white;
+  --border-color: rgba(255, 255, 255, 0.1);
 }
 
 * {
