better link color in light mode

--- a/src/app.css
+++ b/src/app.css
@@ -20,7 +20,7 @@
   --card-text-color: var(--color-dark);
   --body-text-color: var(--color-dark);
   --border-color: #666;
-  --link-color: #14f;
+  --link-color: #2671c2;
   --link-hover-color: #111;
   --toggle-track-color-off: var(--color-dark);
   --toggle-track-color-on: var(--toggle-track-color-off);
