--- a/src/app.css
+++ b/src/app.css
@@ -98,8 +98,8 @@ main {
   margin-inline-end: auto;
   margin-block-start: 2rem;
   margin-block-end: 0;
-  padding-inline-start: 0;
-  padding-inline-end: 0;
+  padding-inline-start: 1rem;
+  padding-inline-end: 1rem;
   padding-block-start: 0;
   padding-block-end: 0;
   width: 100%;
