--- a/src/app.css
+++ b/src/app.css
@@ -98,11 +98,16 @@ main {
   margin-inline-end: auto;
   margin-block-start: 2rem;
   margin-block-end: 0;
-  padding-inline-start: 1rem;
-  padding-inline-end: 1rem;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
   padding-block-start: 0;
   padding-block-end: 0;
   width: 100%;
+
+  &:has(.hero) {
+    padding-inline-start: 1rem;
+    padding-inline-end: 1rem;
+  }
 }
 
 h1,
