--- a/src/app.css
+++ b/src/app.css
@@ -187,3 +187,14 @@ td.error {
 tr:nth-child(even) {
   background-color: var(--card-background-color);
 }
+
+select,
+option,
+input[type=text] {
+  padding: 0.25rem;
+  margin-inline-start: 0.25rem;
+  margin-inline-end: 0.25rem;
+  border: 1px solid var(--color-accent);
+  background-color: var(--card-text-color);
+  color: var(--body-background-color);
+}
