--- a/src/app.css
+++ b/src/app.css
@@ -29,7 +29,7 @@
   --border-color: rgba(0, 0, 0, 0.1);
   --color-inactive: rgba(0, 0, 0, 0.3);
   --input-background-color: rgba(0, 0, 0, 0.1);
-  --status-defunct-background-color: rgba(255, 0, 0, 0.7);
+  --status-defunct-background-color: rgb(255, 50, 50);
   --status-defunct-color: #222;
   --status-active-background-color: rgba(0, 255, 0, 0.7);
   --status-active-color: #222;
@@ -186,4 +186,15 @@ td.error {
 
 tr:nth-child(even) {
   background-color: var(--card-background-color);
+}
+
+select,
+option,
+input[type=text] {
+  padding: 0.25rem;
+  margin-inline-start: 0.25rem;
+  margin-inline-end: 0.25rem;
+  border: 1px solid var(--color-accent);
+  background-color: var(--card-text-color);
+  color: var(--body-background-color);
 }
